<resources>
    <string name="app_name">SmartHome</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Devices</string>
    <string name="tab_text_3">Routines</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="blinds">Blinds</string>
    <string name="door">Door</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="oven">Oven</string>
    <string name="lamp">Lamp</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="lock">Locked</string>
    <string name="unlock">Unlocked</string>
    <string name="temperature">Temperature</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="freezer_temperature">Freezer Temperature</string>
    <string name="mode">Mode</string>
    <string name="defaul">Default</string>
    <string name="party">Party</string>
    <string name="vacation">Vacation</string>
    <string name="cool">Cool</string>
    <string name="fan">Fan</string>
    <string name="v_swing">Vertical Swing</string>
    <string name="h_swing">Horizontal Swing</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="auto">Auto</string>
    <string name="radio_min90">-90</string>
    <string name="radio_min45">-45</string>
    <string name="radio_0">0</string>
    <string name="radio_22">22</string>
    <string name="radio_25">25</string>
    <string name="radio_45">45</string>
    <string name="radio_50">50</string>
    <string name="radio_67">67</string>
    <string name="radio_75">75</string>
    <string name="radio_90">90</string>
    <string name="radio_100">100</string>
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>
    <string name="heat">Heat</string>
    <string name="conventional">Conventional</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>
    <string name="grill">Grill</string>
    <string name="large">Large</string>
    <string name="eco">Eco</string>
    <string name="convection">Convection</string>
    <string name="normal">Normal</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="add_device">Add Device</string>
    <string name="no_name_error">Please enter a device name</string>
    <string name="no_categ_found">Error: No categories found</string>

    <string name="notifTitle">Open Door</string>
    <string name="notifBody">It seems that you have an open door. We suggest you close it for safety.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_error_msg">Unable to get current status</string>
    <string name="set_mode_s">Mode changed successfully</string>
    <string name="set_mode_f">Mode change failed</string>
    <string name="set_temperature_s">Temperature changed successfully</string>
    <string name="set_temperature_f">Temperature change failed</string>
    <string name="set_ftemperature_s">Freezer temperature changed successfully</string>
    <string name="set_ftemperature_f">Freezer temperature change failed</string>
    <string name="action_msg_s">Action Recorded</string>
    <string name="action_msg_f">Could not save action</string>
    <string name="home_txt_1">Welcome to SmartHome. We hope you enjoy our app!</string>
    <string name="home_txt_2">You can check and create devices, and in the future execute your routines!</string>
    <string name="routine_txt_1">This tab will have functionality in the future. We are sorry :(</string>
</resources>
