<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RefrigeratorActivity">

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="148dp"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_refrigerator" />

    <ImageView
        android:id="@+id/imageView_refrigerator"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/refrigerator_icon" />

    <TextView
        android:id="@+id/textView_refrigerator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/refrigerator"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_refrigerator" />

    <RadioGroup
        android:id="@+id/radioGroup_refrigerator_mode"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_refrigerator_mode"
        app:layout_constraintTop_toBottomOf="@+id/textView_refrigerator_mode">

        <RadioButton
            android:id="@+id/radioButton_refrigerator_defaultmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaul"
            tools:text="@string/defaul" />

        <RadioButton
            android:id="@+id/radioButton_refrigerator_vacationmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vacation"
            tools:text="@string/vacation" />

        <RadioButton
            android:id="@+id/radioButton_refrigerator_partymode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/party"
            tools:text="@string/party" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_refrigerator_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="100dp"
        app:layout_constraintTop_toBottomOf="20dp"


    tools:layout_editor_absoluteY="260dp"
        tools:text="@string/temperature" />

    <TextView
        android:id="@+id/textView_refrigerator_freezer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/freezer_temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="@+id/textView_refrigerator_temp"
        app:layout_constraintTop_toBottomOf="@+id/textView_refrigerator_temp"
        tools:text="@string/freezer_temperature" />

    <SeekBar
        android:id="@+id/seekBar_refrigerator_freezer"
        android:layout_width="146dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        app:layout_constraintStart_toEndOf="@+id/textView_refrigerator_temp"
        app:layout_constraintTop_toBottomOf="@+id/textView_refrigerator_temp" />

    <SeekBar
        android:id="@+id/seekBar_refrigerator_temperature"
        android:layout_width="147dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_refrigerator_freezer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/seekBar_refrigerator_freezer"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_refrigerator_freezer"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/textView_refrigerator_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="@+id/textView_refrigerator_freezer"
        app:layout_constraintTop_toBottomOf="@+id/textView_refrigerator_freezer"
        tools:text="@string/mode" />

</android.support.constraint.ConstraintLayout>