<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDeviceActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    <Button
        android:id="@+id/add_device_cancel_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0px"
        android:layout_height="52dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/add_device_save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_device_save_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0px"
        android:layout_height="52dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/add_device_name"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/add_device_spinner"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_device_name" />

</android.support.constraint.ConstraintLayout>